# graphcorder

./: CLAUDE.md  Cargo.toml
examples/: basic.rs  streaming.rs
graphcorder_derive/: Cargo.toml
graphcorder_derive/src/: lib.rs
graphcorder_static_graph/: Cargo.toml
graphcorder_static_graph/src/: codegen.rs  lib.rs  parse.rs  types.rs
src/: graph.rs  lib.rs  main.rs
src/framework/: mod.rs
src/graph/: mod.rs
src/nodes/: mod.rs  print.rs  producer.rs  scale.rs
src/pipeline/: mod.rs
