[package]
name = "graphcorder"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["graphcorder_derive"]

[dependencies]
graphcorder_derive = { path = "graphcorder_derive" }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
