[package]
name = "graphcorder"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["graphcorder_derive"]

[dependencies]
enum_dispatch = "0.3"
facet = "0.46.0"
facet-json = "0.46.0"
facet-json-schema = "0.46.0"
facet-pretty = "0.46.0"
graphcorder_derive = { path = "graphcorder_derive" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
